--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MR3X - Gestão de Aluguéis</title>
-    <meta name="description" content="Sistema completo de gestão de aluguéis e propriedades" />
+    <meta name="description" content="Sistema completo de gestão de aluguéis e imóveis" />
     <!-- Google Fonts - Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
